aws/terraform-do-as3-cf-ha-workInProgress/terraform/f5.tf

resource "random_string" "password" {
  length  = 10
  special = false
}

data "aws_ami" "f5_ami" {
  most_recent = true
  owners      = ["679593333241"]

  filter {
    name   = "name"
    values = [var.f5_ami_search_name]
  }
}

data "template_file" "f5_init" {
  template = file("../scripts/f5_onboard.tmpl")

  vars = {
    password = "${random_string.password.result}"
    libs_dir     = "${var.libs_dir}",
    onboard_log  = "${var.onboard_log}",
  }
}

resource "aws_instance" "f5-1" {

  ami = data.aws_ami.f5_ami.id

  instance_type               = "m5.xlarge"
  private_ip                  = "10.0.0.201"
  associate_public_ip_address = true
  subnet_id                   = module.vpc.public_subnets[0]
  vpc_security_group_ids      = [aws_security_group.f5.id]
  user_data                   = data.template_file.f5_init.rendered
  key_name                    = aws_key_pair.demo.key_name
  root_block_device { delete_on_termination = true }

  provisioner "local-exec" {
    command = "while [[ \"$(curl -skiu ${var.username}:${random_string.password.result} https://${self.public_ip}:${var.port}/mgmt/shared/appsvcs/declare | grep -Eoh \"^HTTP/1.1 204\")\" != \"HTTP/1.1 204\" ]]; do sleep 5; done"
  }
  
  tags = {
    Name  = "${var.prefix}-f5"
    Env   = "consul"
    UK-SE = var.uk_se_name
  }
}

resource "aws_instance" "f5-2" {

  ami = data.aws_ami.f5_ami.id

  instance_type               = "m5.xlarge"
  private_ip                  = "10.0.0.202"
  associate_public_ip_address = true
  subnet_id                   = module.vpc.public_subnets[0]
  vpc_security_group_ids      = [aws_security_group.f5.id]
  user_data                   = data.template_file.f5_init.rendered
  key_name                    = aws_key_pair.demo.key_name
  root_block_device { delete_on_termination = true }

  provisioner "local-exec" {
    command = "while [[ \"$(curl -skiu ${var.username}:${random_string.password.result} https://${self.public_ip}:${var.port}/mgmt/shared/appsvcs/declare | grep -Eoh \"^HTTP/1.1 204\")\" != \"HTTP/1.1 204\" ]]; do sleep 5; done"
  }
  
  tags = {
    Name = "${var.prefix}-f5"
    Env  = "consul"
  }

}
